--- a/java-event-driven-tests/pom.xml
+++ b/java-event-driven-tests/pom.xml
@@ -4,7 +4,7 @@
   <artifactId>event-driven-test-suite</artifactId>
   <version>1.0-SNAPSHOT</version>
   <properties>
-    
+
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <java.version>21</java.version>
@@ -34,7 +34,7 @@
     <dependency>
       <groupId>org.springframework.kafka</groupId>
       <artifactId>spring-kafka</artifactId>
-      <version>3.2.4</version>
+      <version>3.3.0</version> <!-- Updated for security fixes -->
     </dependency>
     <dependency>
       <groupId>redis.clients</groupId>
@@ -109,6 +109,12 @@
           <suiteXmlFiles>
             <suiteXmlFile>testng-integration-suite.xml</suiteXmlFile>
           </suiteXmlFiles>
+          <systemPropertyVariables>
+            <testcontainers.reuse.enable>false</testcontainers.reuse.enable>
+            <testcontainers.cleanup.strategy>eager</testcontainers.cleanup.strategy>
+          </systemPropertyVariables>
+          <failIfNoTests>false</failIfNoTests>
+          <trimStackTrace>false</trimStackTrace>
         </configuration>
       </plugin>
       <plugin>
@@ -130,10 +136,25 @@
           </execution>
         </executions>
       </plugin>
+      <!-- Updated OWASP dependency check plugin with proper configuration -->
       <plugin>
         <groupId>org.owasp</groupId>
         <artifactId>dependency-check-maven</artifactId>
         <version>12.1.3</version>
+        <configuration>
+          <!-- Disable .NET analyzer that's causing the error -->
+          <analyzers>
+            <assemblyEnabled>false</assemblyEnabled>
+          </analyzers>
+          <!-- Set vulnerability threshold to not fail build on low/medium issues -->
+          <failBuildOnCVSS>8</failBuildOnCVSS>
+          <!-- Skip vulnerabilities that are in test scope only -->
+          <skipTestScope>true</skipTestScope>
+          <!-- Add suppression file for known false positives -->
+          <suppressionFiles>
+            <suppressionFile>owasp-suppressions.xml</suppressionFile>
+          </suppressionFiles>
+        </configuration>
         <executions>
           <execution>
             <goals>
